--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyPokemonApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MyPokemonApp" parent="android:Theme.Material.Light.NoActionBar" >
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/avd_anim</item>
+    </style>
 </resources>
